Fixed error messages

--- a/templates/profile_stats.html
+++ b/templates/profile_stats.html
@@ -30,7 +30,7 @@
                             <h6 class="text-primary mb-3">Getting Started</h6>
                             <ol class="text-start">
                                 <li class="mb-2">Join our Discord server</li>
-                                <li class="mb-2">Use <code>/join</code> to join the queue</li>
+                                <li class="mb-2">Use <code>/queue</code> to join the queue</li>
                                 <li class="mb-2">Play matches and report results</li>
                                 <li>Watch your stats grow here!</li>
                             </ol>
